Fixed background-image on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -132,7 +132,7 @@ body {
     margin: 0;
     background-image: url(../images/TastyBG.png);
     font: 14px Verdana;
-    background-size: 1920px 1080px;
+    background-size: 1920px 100vh;
     background-attachment: fixed;
     background-repeat: no-repeat;
     position: relative;
